--- a/BigNumberConsole/BigNumberConsole.vcxproj
+++ b/BigNumberConsole/BigNumberConsole.vcxproj
@@ -152,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
+    <Text Include="output.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BigNumber.h" />
