--- a/BigNumberConsole/BigNumberConsole.vcxproj.filters
+++ b/BigNumberConsole/BigNumberConsole.vcxproj.filters
@@ -24,6 +24,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
+    <Text Include="output.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BigNumber.h">
